# genie-obo-rls-aim-teams-integration

./: .gitignore  LICENSE  README.md  env.example  pyproject.toml  requirements.txt  startup.sh
docs/: 01_ARCHITECTURE.md  02_COMPLETE_IMPLEMENTATION_GUIDE.md  03_USP_UNIQUE_SELLING_PROPOSITION.md  04_DRAWBACKS_AND_LIMITATIONS.md  05_ENTERPRISE_FEASIBILITY.md  06_SECURITY_AUDIT.md  07_CURRENT_FEATURES.md  08_TEAMS_WEBCHAT_USER_GUIDE.md  09_AZURE_WEBAPP_READINESS_CHECKLIST.md  10_ENVIRONMENT_VARIABLES.md  11_API_REFERENCE.md  12_TROUBLESHOOTING.md  13_FAQ.md  QUICK_REFERENCE_CARD.md  README.md
docs/templates/: app-settings.json.template  deploy.sh.template
examples/: conversation_resumption.py  golden_nugget.py  minimal_query.py
scripts/: build.sh
scripts/sql/: 01_create_demo_table.sql  02_insert_sample_data.sql  03_apply_row_filter.sql  04_validate.sql
src/genie_api_obo_rls/: __init__.py  api.py  auth.py  bot.py  charts.py  config.py  genie.py  main.py  services.py
src/genie_api_obo_rls/core/: __init__.py  config.py  genie_client.py  token_exchange.py
src/genie_api_obo_rls/enterprise/: __init__.py  cache.py  cache_redis.py  circuit_breaker.py
src/genie_api_obo_rls/visualization/: __init__.py
tests/: test_api.py  test_auth.py  test_bot.py  test_genie.py  test_services.py  test_space_selection.py
