[project]
name = "genie-api-obo-rls"
version = "0.1.0"
description = "Direct Genie API OBO service with RLS enforcement and Teams Bot integration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # FastAPI for direct API access
  "fastapi>=0.110",
  "uvicorn>=0.27",
  # HTTP clients
  "requests>=2.32",
  "httpx>=0.27",
  # Resilience patterns
  "tenacity>=8.2",
  # NOTE: Removed pydantic to avoid typing-extensions conflicts on Azure App Service
  # Using standard dataclasses instead for configuration and models
  # Bot Framework for Teams integration
  "botbuilder-core>=4.14",
  "botbuilder-dialogs>=4.14",
  "botbuilder-integration-aiohttp>=4.14",
  "aiohttp>=3.9",
  # Azure SDKs for Key Vault and identity
  "azure-identity>=1.15",
  "azure-keyvault-secrets>=4.8",
  # Application Insights telemetry
  "opencensus-ext-azure>=1.1",
  "opencensus-ext-requests>=0.7",
  # Chart generation
  "matplotlib>=3.8",
  "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "pytest-asyncio>=0.23",
  "requests-mock>=1.12",
  "httpx>=0.27",
  "aioresponses>=0.7",
]

[project.scripts]
genie-bot = "genie_api_obo_rls.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
